<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/filter_date_start"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextStartDate"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@id/editTextStartDate"/>

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/filter_date_start_hint"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewStartDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/filter_date_end"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextEndDate"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@id/editTextEndDate"/>

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/filter_date_end_hint"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEndDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartDate" />

    <TextView
        android:id="@+id/textViewCaption"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:labelFor="@id/editTextCaption"
        android:text="@string/filter_caption"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextSearchCaption"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextSearchCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/filter_caption"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCaption"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndDate" />

    <Button
        android:id="@+id/buttonSearchFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="buttonFilterClick"
        android:text="@string/button_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchCaption" />

</android.support.constraint.ConstraintLayout>