<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_placeholder"
            app:srcCompat="@android:color/black" />

        <TextView
            android:id="@+id/textViewTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="0"
            android:text="@string/timestamp" />

        <EditText
            android:id="@+id/editTextCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="0"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/filter_caption"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="false"
            android:singleLine="true" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonLeft"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="buttonClickLeft"
                    android:text="@string/button_left" />

                <Button
                    android:id="@+id/buttonRight"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="buttonClickRight"
                    android:text="@string/button_right" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonSnap"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="buttonClickSnap"
                    android:text="@string/button_snap" />

                <Button
                    android:id="@+id/buttonFilter"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="buttonClickFilter"
                    android:text="@string/button_filter" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>